<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <!--<gradient-->
        <!--android:startColor="#474946"-->
        <!--android:endColor="#181818"-->
        <!--android:angle="270"/>-->
    <!--<corners android:radius="0dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp" >

        <Button
            android:id="@+id/btn_bt_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bt_on" />
        <Button
            android:id="@+id/btn_bt_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bt_off" />
        <Button
            android:id="@+id/btn_devices_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_refresh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp" >
        <ListView
            android:id="@+id/devices_listView"
            android:layout_width="fill_parent"
            android:layout_height="200dp" >
        </ListView>
    </LinearLayout>

    <ImageView
        android:id="@+id/image_link"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/aquacomputer" />
</RelativeLayout>
