<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context="com.android.aquacomputer.farbwerkdemo.FarbwerkDevice">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/image_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="left" />
        <Spinner
            android:id="@+id/output_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/output_arrays"
            android:prompt="@string/output_selector" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/device_setup_layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true">

            <!--https://github.com/LarsWerkman/HoloColorPicker-->
            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_saturation" />
            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_brightness" />
            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/image_link"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/aquacomputer"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
